[package]
edition = "2021"
name = "bevy_dioxus"
version = "0.1.0"

[workspace]
members = ["bevy_dioxus_macro"]

[dependencies]
bevy_dioxus_macro = {path="./bevy_dioxus_macro"}
bevy = { version = "0.11" }
serde = { version = "1", features = ["derive"] }

dioxus = { git="http://github.com/ycysdf/dioxus", default-features = false, features = ["macro", "hooks"] }

flume = "0.11"
futures-core = { version = "0.3.5", default-features = false }
futures-executor = "0.3.28"
futures-util = { version = "0.3.28" }
lazy_static = "1.4.0"
oneshot = "0.1"
smallvec = "1.11.0"
paste = "1"
#akin = "0.4"
count-macro = "0.2.2"
bevy_mod_picking = { version = "0.15.0", default-features = false, features = ["backend_bevy_ui"] }
bevy_cosmic_edit = { git = "http://github.com/ycysdf/bevy_cosmic_edit" }
cosmic-text = { version = "0.9" }
[dev-dependencies]
dioxus-hot-reload = { version = "0.4.0", features = ["file_watcher"] }
bevy-inspector-egui = "0.19.0"
